--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
   ],
   "devDependencies": {
     "bootstrap": "^4.0.0-beta",
-    "gh-pages": "^2.0.1",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.6"
+    "gh-pages": "^2.0.1"
   }
 }
